<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_authentication"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.rayo.digitaldiary.ui.login.LoginFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.rayo.digitaldiary.ui.login.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment" />

    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.rayo.digitaldiary.ui.login.ForgotPasswordFragment"
        android:label="@string/forgot_password"
        tools:layout="@layout/fragment_forgot_password">
        <action
            android:id="@+id/action_forgotPasswordFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/verifyOtp"
        android:name="com.rayo.digitaldiary.ui.login.VerifyOtpFragment"
        android:label="@string/verify_otp"
        tools:layout="@layout/fragment_verify_otp">
        <action
            android:id="@+id/action_verifyOtp_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/completeGoogleLoginFragment"
        android:name="com.rayo.digitaldiary.ui.login.CompleteGoogleLoginFragment"
        android:label="@string/sign_in_with_google"
        tools:layout="@layout/fragment_complete_google_login" />
</navigation>