<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addStaffPresenter"
            type="com.rayo.digitaldiary.ui.staff.AddStaffPresenter" />

        <variable
            name="staffData"
            type="com.rayo.digitaldiary.ui.staff.StaffData" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/tvAddStaff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            term="@{(staffData.id.empty == true)?@string/add_staff:@string/update_staff}"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputStaffName"
            style="@style/textInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            hintString="@{@string/name}"
            tools:hint="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAddStaff"
            app:startIconDrawable="@drawable/ic_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStaffName"
                style="@style/edittextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:text="@={staffData.name}"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPhoneNumber"
            style="@style/textInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            hintString="@{@string/phone_number_optional}"
            tools:hint="@string/phone_number_optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputStaffName"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                style="@style/edittextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="14"
                android:text="@={staffData.contactNumber}"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            style="@style/textInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            hintString="@{@string/email_optional}"
            tools:hint="@string/email_optional"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPhoneNumber"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/edittextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:text="@={staffData.email}"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvStaffStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            term="@{@string/staff_status}"
            tools:text="@string/staff_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputEmail" />

        <RadioGroup
            android:id="@+id/rgStaffStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStaffStatus">

            <RadioButton
                android:id="@+id/radioActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="@{(staffData.active == 1)?true:false}"
                term="@{@string/active}"
                tools:text="@string/active"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioInactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:buttonTint="@color/colorPrimary"
                android:checked="@{(staffData.active == 0)?true:false}"
                term="@{@string/inactive}"
                tools:text="@string/inactive"
                app:layout_constraintBottom_toBottomOf="@id/radioActive"
                app:layout_constraintStart_toEndOf="@id/radioActive"
                app:layout_constraintTop_toTopOf="@id/radioActive" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/ButtonOutlineStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="4dp"
            android:onClick="@{()-> addStaffPresenter.onCancelClick()}"
            term="@{@string/cancel}"
            tools:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/btnAdd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgStaffStatus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            style="@style/ButtonFilledElevatedStyle"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="4dp"
            android:onClick="@{()-> addStaffPresenter.onAddStaffClick(staffData)}"
            term="@{(staffData.id.empty == true)?@string/add: @string/update}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toTopOf="@id/btnCancel"
            tools:text="@string/add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>